--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.5"
+    "@cloudflare/next-on-pages": "^1.13.5",
+    "@types/qrcode": "^1.5.5"
   }
 }
