--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.53.2",
     "react-resizable-panels": "^2.1.7",
+    "react-to-print": "^3.0.5",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
